--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
@@ -6,7 +6,8 @@
     xmlns:local="using:SkiaSharpTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:skia="using:Windows.UI.Xaml.Controls"
+    xmlns:skia="using:SkiaSharp.Views.Windows"
+    xmlns:skial="using:SkiaSharp.Views.Windows"
     mc:Ignorable="d xamarin"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -20,7 +21,7 @@
             <TextBlock x:Name="currentPositionText" />
         </StackPanel>
         <Grid x:Name="panelGrid" Grid.Row="1">
-            <skia:SKSwapChainPanel
+            <skial:SKXamlCanvas
 				x:Name="swapChain"
 				PaintSurface="OnPaintSwapChain"
 				PointerMoved="{x:Bind OnSurfacePointerMoved}"
