--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
@@ -6,8 +6,7 @@
     xmlns:local="using:SkiaSharpTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:skia="using:SkiaSharp.Views.Windows"
-    xmlns:skial="using:SkiaSharp.Views.Windows"
+    xmlns:sk="using:SkiaSharp.Views.Windows"
     mc:Ignorable="d xamarin"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -21,13 +20,13 @@
             <TextBlock x:Name="currentPositionText" />
         </StackPanel>
         <Grid x:Name="panelGrid" Grid.Row="1">
-            <skial:SKXamlCanvas
+            <sk:SKXamlCanvas
 				x:Name="swapChain"
 				PaintSurface="OnPaintSwapChain"
 				PointerMoved="{x:Bind OnSurfacePointerMoved}"
 				xamarin:Background="Transparent"
 				Visibility="{x:Bind hwAcceleration.IsChecked, Mode=OneWay}" />
-            <skia:SKXamlCanvas 
+            <sk:SKXamlCanvas 
 				x:Name="canvas" 
 				PaintSurface="OnPaintSurface"
 				PointerMoved="{x:Bind OnSurfacePointerMoved}"
