--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/MainPage.xaml
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/MainPage.xaml
@@ -4,7 +4,7 @@
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:winui="using:Microsoft.UI.Xaml.Controls"
-    xmlns:lottie="using:Microsoft.Toolkit.Uwp.UI.Lottie"
+    xmlns:lottie="using:CommunityToolkit.WinUI.Lottie"
     xmlns:controls="using:UnoChat.Client.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
 
