--- a/reference/simple-calc/resources/MainPage.xaml
+++ b/reference/simple-calc/resources/MainPage.xaml
@@ -12,6 +12,26 @@
     Background="{ThemeResource BackgroundBrush}">
 
     <Page.Resources>
+
+        <Style TargetType="Button" x:Key="BaseButton" BasedOn="{StaticResource FilledButtonStyle}">
+            <Setter Property="FontSize" Value="32" />
+            <Setter Property="Height" Value="72" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Stretch" />
+        </Style>
+        <Style TargetType="Button" x:Key="KeypadPrimaryButton" BasedOn="{StaticResource BaseButton}">
+            <Setter Property="Foreground" Value="{ThemeResource OnSecondaryContainerBrush}" />
+            <Setter Property="Background" Value="{ThemeResource PrimaryContainerBrush}" />
+        </Style>
+        <Style TargetType="Button" x:Key="KeypadSecondaryButton" BasedOn="{StaticResource BaseButton}">
+            <Setter Property="Foreground" Value="{ThemeResource OnTertiaryBrush}" />
+            <Setter Property="Background" Value="{ThemeResource PrimaryVariantDarkBrush}" />
+        </Style>
+        <Style TargetType="Button" x:Key="KeypadButton" BasedOn="{StaticResource BaseButton}">
+            <Setter Property="Foreground" Value="{ThemeResource OnSurfaceBrush}" />
+            <Setter Property="Background" Value="{ThemeResource SecondaryContainerBrush}" />
+        </Style>
+
         <x:String x:Key="MoonIcon">F1 M 3 0 C 1.9500000476837158 0 0.949999988079071 0.1600000262260437 0 0.46000003814697266 C 4.059999942779541 1.7300000190734863 7 5.519999980926514 7 10 C 7 14.480000019073486 4.059999942779541 18.27000093460083 0 19.540000915527344 C 0.949999988079071 19.840000927448273 1.9500000476837158 20 3 20 C 8.519999980926514 20 13 15.519999980926514 13 10 C 13 4.480000019073486 8.519999980926514 0 3 0 Z</x:String>
         <x:String x:Key="SunIcon">F1 M 5.760000228881836 4.289999961853027 L 3.9600000381469727 2.5 L 2.549999952316284 3.9100000858306885 L 4.340000152587891 5.699999809265137 L 5.760000228881836 4.289999961853027 Z M 3 9.949999809265137 L 0 9.949999809265137 L 0 11.949999809265137 L 3 11.949999809265137 L 3 9.949999809265137 Z M 12 0 L 10 0 L 10 2.950000047683716 L 12 2.950000047683716 L 12 0 L 12 0 Z M 19.450000762939453 3.9100000858306885 L 18.040000915527344 2.5 L 16.25 4.289999961853027 L 17.65999984741211 5.699999809265137 L 19.450000762939453 3.9100000858306885 Z M 16.239999771118164 17.610000610351562 L 18.030000686645508 19.40999984741211 L 19.440000534057617 18 L 17.639999389648438 16.21000099182129 L 16.239999771118164 17.610000610351562 Z M 19 9.949999809265137 L 19 11.949999809265137 L 22 11.949999809265137 L 22 9.949999809265137 L 19 9.949999809265137 Z M 11 4.949999809265137 C 7.690000057220459 4.949999809265137 5 7.639999866485596 5 10.949999809265137 C 5 14.259999752044678 7.690000057220459 16.950000762939453 11 16.950000762939453 C 14.309999942779541 16.950000762939453 17 14.259999752044678 17 10.949999809265137 C 17 7.639999866485596 14.309999942779541 4.949999809265137 11 4.949999809265137 Z M 10 21.900001525878906 L 12 21.900001525878906 L 12 18.950000762939453 L 10 18.950000762939453 L 10 21.900001525878906 Z M 2.549999952316284 17.990001678466797 L 3.9600000381469727 19.400001525878906 L 5.75 17.600000381469727 L 4.340000152587891 16.190000534057617 L 2.549999952316284 17.990001678466797 Z</x:String>
     </Page.Resources>
@@ -56,38 +76,157 @@
             </Grid.ColumnDefinitions>
 
             <!--Row 0-->
-            <Button Grid.Row="0" Grid.Column="0" Command="{Binding InputCommand}" FontSize="32" CommandParameter="C" Background="{ThemeResource PrimaryContainerBrush}" Content="C" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSecondaryContainerBrush}" />
-            <Button Grid.Row="0" Grid.Column="1" Command="{Binding InputCommand}" FontSize="32" CommandParameter="±" Background="{ThemeResource PrimaryContainerBrush}" Content="±" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSecondaryContainerBrush}" />
-            <Button Grid.Row="0" Grid.Column="2" Command="{Binding InputCommand}" FontSize="32" CommandParameter="%" Background="{ThemeResource PrimaryContainerBrush}" Content="%" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSecondaryContainerBrush}" />
-            <Button Grid.Row="0" Grid.Column="3" Command="{Binding InputCommand}" FontSize="32" CommandParameter="÷" Background="{ThemeResource PrimaryVariantDarkBrush}" Content="÷" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnTertiaryBrush}" />
+            <Button 
+                Grid.Row="0" 
+                Grid.Column="0" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="C" 
+                Content="C" 
+                Style="{StaticResource KeypadPrimaryButton}" />
+            <Button 
+                Grid.Row="0" 
+                Grid.Column="1"
+                Command="{Binding InputCommand}" 
+                CommandParameter="±" 
+                Content="±" 
+                Style="{StaticResource KeypadPrimaryButton}" />
+            <Button 
+                Grid.Row="0" 
+                Grid.Column="2" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="%"
+                Content="%" 
+                Style="{StaticResource KeypadPrimaryButton}" />
+            <Button 
+                Grid.Row="0" 
+                Grid.Column="3" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="÷" 
+                Content="÷" 
+                Style="{StaticResource KeypadSecondaryButton}" />
 
             <!--Row 1-->
-            <Button Grid.Row="1" Grid.Column="0" Command="{Binding InputCommand}" FontSize="32" CommandParameter="7" Background="{ThemeResource SecondaryContainerBrush}" Content="7" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="1" Grid.Column="1" Command="{Binding InputCommand}" FontSize="32" CommandParameter="8" Background="{ThemeResource SecondaryContainerBrush}" Content="8" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="1" Grid.Column="2" Command="{Binding InputCommand}" FontSize="32" CommandParameter="9" Background="{ThemeResource SecondaryContainerBrush}" Content="9" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="1" Grid.Column="3" Command="{Binding InputCommand}" FontSize="32" CommandParameter="×" Background="{ThemeResource PrimaryVariantDarkBrush}" Content="×" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnTertiaryBrush}" />
+            <Button 
+                Grid.Row="1" 
+                Grid.Column="0" 
+                Command="{Binding InputCommand}"
+                CommandParameter="7" 
+                Content="7" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="1"
+                Grid.Column="1" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="8" 
+                Content="8" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="1" 
+                Grid.Column="2" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="9" 
+                Content="9" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="1" 
+                Grid.Column="3" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="×" 
+                Content="×" 
+                Style="{StaticResource KeypadSecondaryButton}"  />
 
             <!--Row 2-->
-            <Button Grid.Row="2" Grid.Column="0" Command="{Binding InputCommand}" FontSize="32" CommandParameter="4" Background="{ThemeResource SecondaryContainerBrush}" Content="4" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="2" Grid.Column="1" Command="{Binding InputCommand}" FontSize="32" CommandParameter="5" Background="{ThemeResource SecondaryContainerBrush}" Content="5" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="2" Grid.Column="2" Command="{Binding InputCommand}" FontSize="32" CommandParameter="6" Background="{ThemeResource SecondaryContainerBrush}" Content="6" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="2" Grid.Column="3" Command="{Binding InputCommand}" FontSize="32" CommandParameter="−" Background="{ThemeResource PrimaryVariantDarkBrush}" Content="−" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnTertiaryBrush}" />
+            <Button 
+                Grid.Row="2" 
+                Grid.Column="0" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="4" 
+                Content="4" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="2" 
+                Grid.Column="1" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="5" 
+                Content="5" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="2" 
+                Grid.Column="2" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="6" 
+                Content="6" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="2" 
+                Grid.Column="3" 
+                Command="{Binding InputCommand}"
+                CommandParameter="−" 
+                Content="−" 
+                Style="{StaticResource KeypadSecondaryButton}" />
 
             <!--Row 3-->
-            <Button Grid.Row="3" Grid.Column="0" Command="{Binding InputCommand}" FontSize="32" CommandParameter="1" Background="{ThemeResource SecondaryContainerBrush}" Content="1" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="3" Grid.Column="1" Command="{Binding InputCommand}" FontSize="32" CommandParameter="2" Background="{ThemeResource SecondaryContainerBrush}" Content="2" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="3" Grid.Column="2" Command="{Binding InputCommand}" FontSize="32" CommandParameter="3" Background="{ThemeResource SecondaryContainerBrush}" Content="3" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="3" Grid.Column="3" Command="{Binding InputCommand}" FontSize="32" CommandParameter="+" Background="{ThemeResource PrimaryVariantDarkBrush}" Content="+" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnTertiaryBrush}" />
+            <Button 
+                Grid.Row="3" 
+                Grid.Column="0"
+                Command="{Binding InputCommand}"
+                CommandParameter="1" 
+                Content="1"
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="3" 
+                Grid.Column="1" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="2" 
+                Content="2" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="3" 
+                Grid.Column="2" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="3" 
+                Content="3"
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="3"
+                Grid.Column="3" 
+                Command="{Binding InputCommand}"
+                CommandParameter="+" 
+                Content="+" 
+                Style="{StaticResource KeypadSecondaryButton}" />
 
             <!--Row 4-->
-            <Button Grid.Row="4" Grid.Column="0" Command="{Binding InputCommand}" FontSize="32" CommandParameter="." Background="{ThemeResource SecondaryContainerBrush}" Content="." HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="4" Grid.Column="1" Command="{Binding InputCommand}" FontSize="32" CommandParameter="0" Background="{ThemeResource SecondaryContainerBrush}" Content="0" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}" />
-            <Button Grid.Row="4" Grid.Column="2" Command="{Binding InputCommand}" FontSize="32" CommandParameter="back" Background="{ThemeResource SecondaryContainerBrush}" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnSurfaceBrush}">
+            <Button 
+                Grid.Row="4"
+                Grid.Column="0"
+                Command="{Binding InputCommand}"
+                CommandParameter="."
+                Content="."
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="4" 
+                Grid.Column="1" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="0" 
+                Content="0" 
+                Style="{StaticResource KeypadButton}" />
+            <Button 
+                Grid.Row="4" 
+                Grid.Column="2" 
+                Command="{Binding InputCommand}" 
+                CommandParameter="back" 
+                Style="{StaticResource KeypadButton}" >
                 <Button.Content>
                     <FontIcon Glyph="&#xE926;" />
                 </Button.Content>
             </Button>
-            <Button Grid.Row="4" Grid.Column="3" Command="{Binding InputCommand}" FontSize="32" CommandParameter="=" Background="{ThemeResource PrimaryVariantDarkBrush}" Content="=" HorizontalAlignment="Stretch" Height="72" VerticalAlignment="Stretch" Foreground="{ThemeResource OnTertiaryBrush}" />
+            <Button 
+                Grid.Row="4" 
+                Grid.Column="3"
+                Command="{Binding InputCommand}"
+                CommandParameter="=" 
+                Content="=" 
+                Style="{StaticResource KeypadSecondaryButton}" />
         </Grid>
     </Grid>
 </Page>
