--- a/UI/XamlBasics/ListViewSample/ListViewSample.Shared/App.xaml
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Shared/App.xaml
@@ -2,7 +2,7 @@
     x:Class="ListViewSample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App1">
+    xmlns:local="clr-namespace:ListViewSample">
 
     <Application.Resources>
         <ResourceDictionary>
