--- a/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/App.xaml
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ListViewSample.WPF.Host.App"
+﻿<Application x:Class="ListViewSample.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ListViewSample.WPF.Host"
+             xmlns:local="clr-namespace:ListViewSample.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
