--- a/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/MainWindow.xaml
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ListViewSample.WPF.Host.MainWindow"
+﻿<Window x:Class="ListViewSample.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ListViewSample.WPF.Host"
+        xmlns:local="clr-namespace:ListViewSample.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 	<ContentControl x:Name="root"/>
