chore: adjusting missing changes

--- a/reference/simple-calc/resources/AppResources.xaml
+++ b/reference/simple-calc/resources/AppResources.xaml
@@ -4,10 +4,8 @@
     <ResourceDictionary.MergedDictionaries>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
-        <MaterialColors xmlns="using:Uno.Material"
-                                OverrideSource="ms-appx:///SimpleCalculator/Styles/ColorPaletteOverride.xaml"/>
-
-        <MaterialResources xmlns="using:Uno.Material" />
+        <MaterialTheme xmlns="using:Uno.Material"
+			                    ColorOverrideSource="ms-appx:///SimpleCalculator/Styles/ColorPaletteOverride.xaml" />
 
         <ToolkitResources xmlns="using:Uno.Toolkit.UI" />
 
