--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Base/AppHead.xaml
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Base/AppHead.xaml
@@ -1,5 +1,5 @@
-﻿<Application
-    x:Class="WCTTestbed2.App"
+﻿<local:App
+	x:Class="WCTTestbed2.AppHead"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WCTTestbed2">
@@ -8,10 +8,14 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
-            </ResourceDictionary.MergedDictionaries>
-            <!-- Add resources here -->
+
+				<ResourceDictionary Source="ms-appx:///WCTTestbed2/AppResources.xaml" />
+				
+                <!-- Include additional resource dictionaries here, or in WCTTestbed2/AppResources.xaml -->				
+			</ResourceDictionary.MergedDictionaries>
+			
+			<!-- Include additional resources here, or in WCTTestbed2/AppResources.xaml -->
         </ResourceDictionary>
     </Application.Resources>
 
-</Application>
+</local:App>
