--- a/UI/MvuxHowTos/TheFancyWeddingHall/TheFancyWeddingHall/MainPage.xaml
+++ b/UI/MvuxHowTos/TheFancyWeddingHall/TheFancyWeddingHall/MainPage.xaml
@@ -1,4 +1,5 @@
-<Page x:Class="TheFancyWeddingHall.MainPage"
+<Page 
+    x:Class="TheFancyWeddingHall.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
