fix: Added Command to MVUX SliderApp

--- a/UI/MvuxHowTos/SliderApp/SliderApp/MainPage.xaml
+++ b/UI/MvuxHowTos/SliderApp/SliderApp/MainPage.xaml
@@ -17,5 +17,8 @@
 
         <TextBlock Text="Set state value:"/>
         <Slider Value="{Binding SliderValue, Mode=TwoWay}" />
+
+        <Button Content="Reset slider" Command="{Binding ResetSlider}" />
+        
     </StackPanel>
 </Page>
