--- a/UI/MvuxHowTos/SliderApp/SliderApp/MainPage.xaml
+++ b/UI/MvuxHowTos/SliderApp/SliderApp/MainPage.xaml
@@ -19,6 +19,7 @@
         <Slider Value="{Binding SliderValue, Mode=TwoWay}" />
 
         <Button Content="Reset slider" Command="{Binding ResetSlider}" />
+        <Button Content="Increment slider" Command="{Binding IncrementSlider}" />
         
     </StackPanel>
 </Page>
