--- a/UI/MvuxHowTos/EditablePeopleApp/EditablePeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/EditablePeopleApp/EditablePeopleApp/MainPage.xaml
@@ -1,4 +1,6 @@
-<Page x:Class="EditablePeopleApp.MainPage"
+<Page 
+    x:Name="peopleView"
+    x:Class="EditablePeopleApp.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mvux="using:Uno.Extensions.Reactive.UI">
