--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/Styles/ColorPaletteOverride.xaml
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/Styles/ColorPaletteOverride.xaml
@@ -2,34 +2,69 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <!--Colors-->
-    <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Light">
-            <Color x:Key="BackgroundColor">#F2F2F7</Color>
-            <Color x:Key="PrimaryVariantDarkColor">#4B5EFC</Color>
-            <Color x:Key="OnSurfaceVariantColor">#8A8494</Color>
-            <Color x:Key="SecondaryContainerColor">#FFFFFF</Color>
-            <Color x:Key="OnSecondaryContainerColor">#661B192C</Color>
-            <Color x:Key="PrimaryContainerColor">#D2D3DA</Color>
-            <Color x:Key="SurfaceColor">#E5E5EA</Color>
-            <Color x:Key="PrimaryColor">#28CD55</Color>
-            <Color x:Key="OnPrimaryContainerColor">#1B192C</Color>
-            <Color x:Key="PrimaryVariantLightColor">#007AFF</Color>
-            <Color x:Key="SecondaryColor">#D2D3DA</Color>
-            <Color x:Key="SurfaceVariantColor">#F2EFF5</Color>
-            <Color x:Key="TertiaryColor">#FF9500</Color>
-        </ResourceDictionary>
-        <ResourceDictionary x:Key="Dark">
-            <Color x:Key="TertiaryColor">#FF9F0A</Color>
-            <Color x:Key="PrimaryColor">#32D74B</Color>
-            <Color x:Key="PrimaryContainerColor">#4E505F</Color>
-            <Color x:Key="PrimaryVariantLightColor">#0A84FF</Color>
-            <Color x:Key="PrimaryVariantDarkColor">#4B5EFC</Color>
-            <Color x:Key="SecondaryColor">#5C5659</Color>
-            <Color x:Key="SecondaryContainerColor">#2E2F38</Color>
-            <Color x:Key="OnSecondaryContainerColor">#66FFFFFF</Color>
-            <Color x:Key="BackgroundColor">#17171C</Color>
-            <Color x:Key="OnBackgroundColor">#FFFFFF</Color>
-            <Color x:Key="SurfaceColor">#777274</Color>
-        </ResourceDictionary>
-    </ResourceDictionary.ThemeDictionaries>
+	<ResourceDictionary.ThemeDictionaries>
+		<ResourceDictionary x:Key="Dark">
+			<Color x:Key="BackgroundColor">#17171C</Color>
+			<Color x:Key="PrimaryColor">#4B5EFC</Color>
+			<Color x:Key="SecondaryContainerColor">#2E2F38</Color>
+			<Color x:Key="OnSecondaryContainerColor">#95969F</Color>
+			<Color x:Key="OnBackgroundColor">#E4E1E6</Color>
+			<Color x:Key="OnPrimaryColor">#003259</Color>
+			<Color x:Key="SecondaryColor">#4E505F</Color>
+			<Color x:Key="OnSurfaceColor">#E6E1E5</Color>
+			<Color x:Key="SurfaceColor">#2E2F38</Color>
+			<Color x:Key="PrimaryInverseColor">#2B53CE</Color>
+			<Color x:Key="PrimaryContainerColor">#0039B4</Color>
+			<Color x:Key="OnPrimaryContainerColor">#DCE1FF</Color>
+			<Color x:Key="PrimaryVariantLightColor">#0A84FF</Color>
+			<Color x:Key="PrimaryVariantDarkColor">#4B5EFC</Color>
+			<Color x:Key="OnSecondaryColor">#2B3042</Color>
+			<Color x:Key="SurfaceInverseColor">#E4E1E6</Color>
+			<Color x:Key="SurfaceVariantColor">#49454F</Color>
+			<Color x:Key="OnSurfaceInverseColor">#1B1B1F</Color>
+			<Color x:Key="OnSurfaceVariantColor">#CAC4D0</Color>
+			<Color x:Key="OutlineColor">#90909A</Color>
+			<Color x:Key="ErrorColor">#FFB4AB</Color>
+			<Color x:Key="OnErrorColor">#690005</Color>
+			<Color x:Key="ErrorContainerColor">#93000A</Color>
+			<Color x:Key="OnErrorContainerColor">#FFDAD6</Color>
+			<Color x:Key="TertiaryColor">#E3BADA</Color>
+			<Color x:Key="OnTertiaryColor">#43273F</Color>
+			<Color x:Key="OnTertiaryContainerColor">#FFD7F5</Color>
+			<Color x:Key="TertiaryContainerColor">#5C3D57</Color>
+		</ResourceDictionary>
+		<ResourceDictionary x:Key="Light">
+			<Color x:Key="PrimaryColor">#4B5EFC</Color>
+			<Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+			<Color x:Key="PrimaryInverseColor">#B7C4FF</Color>
+			<Color x:Key="PrimaryContainerColor">#DCE1FF</Color>
+			<Color x:Key="OnPrimaryContainerColor">#001551</Color>
+			<Color x:Key="PrimaryVariantLightColor">#007AFF</Color>
+			<Color x:Key="PrimaryVariantDarkColor">#4B5EFC</Color>
+			<Color x:Key="SecondaryColor">#D2D3DA</Color>
+			<Color x:Key="SecondaryVariantDarkColor">#2BB27E</Color>
+			<Color x:Key="SecondaryVariantLightColor">#9CFFDF</Color>
+			<Color x:Key="OnSecondaryColor">#FFFFFF</Color>
+			<Color x:Key="SecondaryContainerColor">#FFFFFF</Color>
+			<Color x:Key="OnSecondaryContainerColor">#9C9BA6</Color>
+			<Color x:Key="BackgroundColor">#F2F2F7</Color>
+			<Color x:Key="OnBackgroundColor">#1B1B1F</Color>
+			<Color x:Key="SurfaceColor">#FFFFFF</Color>
+			<Color x:Key="SurfaceInverseColor">#303034</Color>
+			<Color x:Key="OnSurfaceColor">#1C1B1F</Color>
+			<Color x:Key="OnSurfaceInverseColor">#F2F0F4</Color>
+			<Color x:Key="SurfaceVariantColor">#F2EFF5</Color>
+			<Color x:Key="OnSurfaceVariantColor">#8A8494</Color>
+			<Color x:Key="OutlineColor">#767680</Color>
+			<Color x:Key="ErrorColor">#BA1A1A</Color>
+			<Color x:Key="OnErrorColor">#FFFFFF</Color>
+			<Color x:Key="ErrorContainerColor">#FFDAD6</Color>
+			<Color x:Key="OnErrorContainerColor">#410002</Color>
+			<Color x:Key="TertiaryColor">#75546F</Color>
+			<Color x:Key="OnTertiaryColor">#FFFFFF</Color>
+			<Color x:Key="TertiaryContainerColor">#FFD7F5</Color>
+			<Color x:Key="OnTertiaryContainerColor">#2C1229</Color>
+			<Color x:Key="StatusBarForegroundColor">#000000</Color>
+		</ResourceDictionary>
+	</ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
